# jarvis

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/src/jarvis/: config.py  main.py
backend/src/jarvis/agents/: __init__.py
backend/src/jarvis/agents/dev/: __init__.py  agent.py  prompts.py
backend/src/jarvis/agents/personal/: __init__.py  agent.py  prompts.py
backend/src/jarvis/agents/research/: __init__.py  agent.py  prompts.py
backend/src/jarvis/api/: agents.py  auth.py  runs.py  ws.py
backend/src/jarvis/core/: agent.py  checkpoint.py  llm.py  memory.py  registry.py  runner.py  scheduler.py  security.py  tracing.py
backend/src/jarvis/db/: models.py  session.py
backend/src/jarvis/tests/: conftest.py  test_agent_run.py  test_api.py  test_auth.py  test_dev_agent.py  test_memory.py  test_personal_agent.py  test_registry.py  test_research_agent.py
backend/src/jarvis/tools/: __init__.py  dev.py  files.py  gmail.py  memory.py  web.py
deploy/caddy/: Caddyfile  Dockerfile
deploy/postgres/: init-langfuse.sh
docs/: architecture.md  repo-structure.md
docs/runbooks/: adding-an-agent.md  backup.md  hardening.md  migration.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts
scripts/: backup.sh
