[project]
name = "jarvis"
version = "0.1.0"
description = "Self-hosted multi-agent environment"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "structlog>=24.1",
]

# Added in the agent-framework phase:
#   langgraph, langgraph-checkpoint-postgres, litellm, langfuse,
#   sqlalchemy, alembic, psycopg[binary], apscheduler,
#   python-jose or pyjwt, argon2-cffi

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]

[tool.ruff]
line-length = 100
src = ["src"]
